# 3D-Scanning-and-Motion-Capture

./: README.md
debugEdition/: CMakeLists.txt
debugEdition/Dataloader/: pair_load.cpp  pair_load.h
debugEdition/MVStereo/: CMakeLists.txt  mv_stereo.cpp  mv_stereo.h
debugEdition/Stereo/: CMakeLists.txt  Stereo.cpp  Stereo.h
debugEdition/test/: test.cpp
releaseEdition/: CMakeLists.txt
releaseEdition/Dataloader/: CMakeLists.txt  pair_load.cpp  pair_load.h
releaseEdition/MVStereo/: CMakeLists.txt
releaseEdition/SfM/: CMakeLists.txt  Stereo.cpp  Stereo.h
releaseEdition/eval/: evaluate.py  stereo.py  utils.py
releaseEdition/test/: test.cpp
